# reuleaux

base_placement_plugin/: plugin.xml
base_placement_plugin/src/: place_base.cpp
map_creator/: CMakeLists.txt
map_creator/include/map_creator/: abb_irb2400_manipulator_ikfast_solver.cpp  irb2400_ikfast.cpp  irb6640_ikfast.cpp  kinematics.h  kuka_kr10_ikfast.cpp  kuka_kr120_ikfast.cpp  mh5_ikfast.cpp  mitsubishi_ikfast.cpp  remove_reachability.h  rx160_ikfast.cpp  sia10f_ikfast.cpp  sia5d_ikfast.cpp  sphere_discretization.h
map_creator/maps/: motoman_sia10f_r0.08_Inv_reachability.h5  motoman_sia10f_r0.08_reachability.h5  motoman_sia5d_r0.08_Inv_reachability.h5
map_creator/src/: create_inverse_reachability_map.cpp  create_reachability_map.cpp  load_reachability_map.cpp  remove_reachability.cpp  sphere_discretization.cpp
reachability/: CMakeLists.txt  package.xml
reachability/include/reachability/: hdf5_dataset.h  helpers.h  robot_kinematics.h  sphere_discretization.h
reachability/launch/: create_inverse_reachability_map_fetch.launch  create_inverse_reachability_map_from_message_fetch.launch  create_inverse_reachability_map_from_message_tracbot.launch  create_reachability_map_fetch.launch  create_reachability_map_tracbot.launch  load_reachability_map_fetch.launch  load_reachability_map_message_fetch.launch  transform_reachability_map_fetch.launch  transform_reachability_map_tracbot.launch
reachability/maps/: fetch_10.h5  fetch_15.h5  fetch_50_backup.h5  inverse_fetch_10.h5  tracbot_10.h5  tracbot_15.h5  tracbot_50.h5
reachability/rviz/: fetch_reachability.rviz
reachability/src/: create_inverse_reachability_map.cpp  create_inverse_reachability_map_from_message.cpp  create_reachability_map.cpp  debug_visualize_poses.cpp  hdf5_dataset.cpp  helpers.cpp  load_reachability_map.cpp  load_reachability_map_message.cpp  robot_kinematics.cpp  sphere_discretization.cpp  transform_reachability_to_ros_message.cpp
reachability_msgs/: CMakeLists.txt  package.xml
reachability_msgs/msg/: WorkSpace.msg  capability.msg
reachability_stance_generators/: CMakeLists.txt  package.xml  reachability_stance_generators.xml
reachability_stance_generators/include/reachability_stance_generators/: reachability_stance_generator.h
reachability_stance_generators/launch/: stance_gen.launch
reachability_stance_generators/src/: reachability_stance_generator.cpp
workspace_visualization/: CMakeLists.txt  package.xml
workspace_visualization/src/: capability_map_display.cpp  capability_map_display.h  capability_map_visual.cpp  capability_map_visual.h  reachability_map_display.cpp  reachability_map_display.h  reachability_map_visual.cpp  reachability_map_visual.h
