<?xml version="1.0"?>
<package format="2">
  <name>reachability</name>
  <version>0.0.0</version>
  
  <description>The reachability package</description>
   <maintainer email="ana@traclabs.com">Ana</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>octomap</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>trac_ik_lib</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>reachability_msgs</depend>
  <depend>cache_utils</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <depend>libcereal-dev</depend>
  
  <export>
  </export>
  
</package>
