<?xml version="1.0"?>
<package format="2">
  <name>reachability_stance_generators</name>
  <version>1.1.0</version>
  <description>The reachability_stance_generators package</description>
  <maintainer email="ana@traclabs.com">Ana C.H.Q.</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>stance_generator_base</depend>
  <depend>craftsman_msgs</depend>
  <depend>planner_interface</depend>
  <depend>planner_viz</depend>
  <depend>reachability</depend>
  <depend>reachability_msgs</depend>
  
  <export>
    <stance_generator_base plugin="${prefix}/reachability_stance_generators.xml"/>
  </export>
</package>
