<?xml version="1.0"?>
<package>
  <name>workspace_visualization</name>
  <version>0.0.0</version>
  <description>The workspace_visualization package</description>

  <maintainer email="makhabhi@isu.edu">Abhijit Makhal</maintainer>


  <license>Apache2.0</license>
  <author email="makhabhi@isu.edu">Abhijit Makhal</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rviz</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>reachability_msgs</build_depend>

  
  <run_depend>rviz</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
